# vistara

./: .dockerignore  .env.example  .gitignore  Dockerfile  OPERATIONS.md  README.md  docker-compose.local.yml  docker-compose.vps.yml  docker-compose.yml  package-lock.json  package.json  plan.md  test.csv  test_sandbox.mjs
.codex/: config.toml
agent/: .dockerignore  Dockerfile  pyproject.toml
agent/agent/: __init__.py  config.py  llm.py  main.py  prompts.py  schemas.py
agent/agent/graph/: analyst.py  dashboard.py  execute_analytics.py  graph.py  orchestrator.py  state.py  surface.py
client/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
data/: umkm.db-shm
docker/: README.md  entrypoint.sh
public/: README.md  app.js  canvasViewport.js  chartCatalog.js  chatRequestPolicy.js  dashboard-layout.js  exportSummary.js  index.html  runtime-env.js  styles.css  workspaceState.js  workspaceState.mjs
scripts/: README.md  backup-lib.mjs  backup.mjs  deploy-vps.sh  local-test.sh  restore.mjs
src/: README.md  config.mjs  db.mjs  router.mjs  server.mjs
test/: README.md  agent-runtime.test.mjs  backup-ops.test.mjs  canvas-viewport.test.mjs  chat-request-policy.test.mjs  chat-sessions.test.mjs  column-mapper.test.mjs  csv.test.mjs  dashboard-image.test.mjs  dashboard-layout.test.mjs  dashboard-render-route.test.mjs  data-quality.test.mjs  db-params.test.mjs  db-runtime.test.mjs  export-summary.test.mjs  http-request.test.mjs  json.test.mjs  parse.test.mjs  python-agent-security.test.mjs  python-runtime.test.mjs  query-templates.test.mjs  (+9 more)
(+109 files in other folders)
